2013-08-28  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-search): Change regexp error message for
	non-regexp searches.  (Bug#15166)

2013-08-28  Paul Eggert  <eggert@cs.ucla.edu>

	* Makefile.in (SHELL): Now @SHELL@, not /bin/sh,
	for portability to hosts where /bin/sh has problems.

2013-08-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/cconv.el (cconv--analyse-function): Improve warning.

2013-08-27  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-other-meta-char): Don't store kmacro commands
	in the keyboard macro.  (Bug#15126)

2013-08-27  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-quote-char): Comment out converting unibyte
	to multibyte, thus syncing with its `quoted-insert' counterpart.
	(Bug#15166)

2013-08-27  Martin Rudalics  <rudalics@gmx.at>

	* window.el (display-buffer-use-some-window): Add missing
	argument in call of get-largest-window (Bug#15185).
	Reported by Stephen Leake.

2013-08-27  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/package.el (package-buffer-info): Fix message typo.

2013-08-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/python.el (python-font-lock-keywords): Don't return nil
	from a matcher-function unless there's no more matches (bug#15161).

2013-08-26  Michael Albinus  <michael.albinus@gmx.de>

	* minibuffer.el: Revert change from 2013-08-20.

	* net/tramp.el (tramp-find-method, tramp-find-user): Mark result
	with text property `tramp-default', if appropriate.
	(tramp-check-proper-host): New defun.
	(tramp-dissect-file-name): Do not check hostname.  Revert change
	of 2013-03-18.
	(tramp-backtrace): Make VEC-OR-PROC optional.

	* net/tramp-adb.el (tramp-adb-maybe-open-connection):
	* net/tramp-gvfs.el (tramp-gvfs-maybe-open-connection):
	* net/tramp-sh.el (tramp-maybe-open-connection):
	* net/tramp-smb.el (tramp-smb-maybe-open-connection):
	Apply `tramp-check-proper-host'.

2013-08-26  Tassilo Horn  <tsdh@gnu.org>
